# minesweepers

./: README.md
c/: CMakeLists.txt  README  README.md  global.h  graphics.c  graphics.h  logic.c  logic.h  main  main.c  minesweeper  minesweeper.c
c/cmake/: FindSDL2_ttf.cmake
c/src/: CMakeLists.txt  global.h  graphics.c  logic.c  main.c
